# C_Libraries_libft

./: .gitignore  .travis.yml  CMakeLists.txt  ISSUE_TEMPLATE.md  Makefile  ft_memset.c  libft.h
inc/libft/basics/: chars.h  memory.h  strings.h
inc/libft/containers/: list.h
inc/libft/utils/: file.h
src/basics/chars/check/: ft_isalnum.c  ft_iscntrl.c  ft_isprint.c  ft_ispunct.c  ft_isspace.c
src/basics/chars/transform/: ft_tolower.c  ft_toupper.c
src/basics/maths/: ft_lcm.c
src/basics/memory/create/: ft_memalloc.c
src/basics/memory/transform/: ft_bzero.c  ft_memmove.c  ft_swap.c
src/basics/numbers/convers/: ft_atoi.c  ft_itoa.c
src/basics/numbers/output/integers/: ft_putnbr.c  ft_putnbr_fd.c
src/basics/strings/create/: ft_strdup.c  ft_strjoin.c  ft_strmap.c  ft_strmapi.c  ft_strndup.c  ft_strnew.c  ft_strnjoin.c  ft_strsplit.c  ft_strsub.c  ft_strtrim.c
src/basics/strings/delete/: ft_strdel.c
src/basics/strings/iterate/: ft_str_endswith.c  ft_str_startswith.c  ft_strequ.c  ft_strnequ.c
src/basics/strings/output/: ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c
src/basics/strings/transform/: ft_strclr.c  ft_strlcat.c  ft_strmerge.c  ft_strrev.c  ft_strtolower.c  ft_strtoupper.c
src/containers/list/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c
src/utils/file/: ft_readline.c
